--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!--  -->
-    <script type="text/javascript" src="./dist/TagCloud.min.js"></script>
+    <!-- <script type="text/javascript" src="./dist/TagCloud.min.js"></script> -->
     <!-- email -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
