added metadata to html

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""/>
+
+      <meta property="og:title" content="Wayne Nguyen Portfolio">
+      <meta property="og:description" content="This is my portfolio to showcase my projects.">
+      <meta property="og:image" content="https://www.waynebuildsweb.ca/favicon.ico">
+      <meta property="og:url" content="https://www.waynebuildsweb.ca">
+      <meta property="og:type" content="website">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
