--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
       <meta property="og:image" content="https://www.waynebuildsweb.ca/favicon.ico">
       <meta property="og:url" content="https://www.waynebuildsweb.ca">
       <meta property="og:type" content="website">
+      <meta name="ahrefs-site-verification" content="0615a601f7d9253a6639ce13ed1b15b101aaab6a4d5f97b336b3807aaedfa002">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
